Improved the LaTeX code commented lines that separate the sub|sub|sections

--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -58,9 +58,9 @@
     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main/LangCSVCode.conf}
     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main/LangISOCode.conf}
 \end{itemize}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -69,9 +69,9 @@
 
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/lang/SetLibLang.sh}
-\end{itemize}
+\end{itemize}% ------------
 
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -115,7 +115,7 @@
 
 \begin{justify}
     Pour plus de praticité, vous pouvez créer un fichier nommé \textbf{\color{lime}LangISOCode.conf} dans ce dossier :
-    
+
     \begin{itemize}
         \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}
     \end{itemize}
@@ -133,8 +133,9 @@
     \end{itemize}
 \end{justify}
 
+% ------------
 
-% -----------------------
+% ----------------------
 
 % -----------------------------------------------
 
@@ -149,9 +150,9 @@
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}}
 \end{itemize}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -161,17 +162,18 @@
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}}
 \end{itemize}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Consignes}\color{white}
 
+% ------------
 
-% -----------------------
+% ----------------------
 
 % -----------------------------------------------
 
@@ -186,9 +188,9 @@
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/module/main/colors.conf}\\[1\baselineskip]
 \end{itemize}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -199,9 +201,9 @@
     \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Decho.lib}
     \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Headers.lib}\\[1\baselineskip]
 \end{itemize}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -234,7 +236,7 @@
 
 \begin{justify}
     Puis la sous-section suivante :
-    
+
     \begin{itemize}
         \item \textbf{TEXT ENCODING}
     \end{itemize}
@@ -274,12 +276,12 @@
 
 	\begin{itemize}
 		\item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Echo.lib}
-	\end{itemize}		
+	\end{itemize}
 \end{justify}
 
 \begin{justify}
 	Puis dans la sous-catégorie suivante :
-	
+
 	\begin{itemize}
     	\item \textbf{DISPLAYING A COLORED MESSAGE WITH A PAUSE TIME DEPENDING ON THE\\ "\$\_\_BU\_MAIN\_STAT\_TIME\_TXT" STATUS VARIABLE}
 	\end{itemize}
@@ -287,7 +289,7 @@
 
 \begin{justify}
 	Vous y trouvrerez des fonctions nommées \textbf{\color{mauve}BU::Echo<\$\_nom\_couleur\_en\_anglais>}.
-\end{justify} 
+\end{justify}
 
 \begin{justify}
 Copiez-collez simplement l'une de ces fonctions, et remplacez y le nom de la couleur par celui de la nouvelle couleur.\\[1\baselineskip]
@@ -295,11 +297,11 @@ Copiez-collez simplement l'une de ces fonctions, et remplacez y le nom de la cou
 
 \begin{justify}
 	Enfin, rendez-vous dans ce fichier de librairie :
-	
-	\begin{itemize}	
+
+	\begin{itemize}
 		\item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Headers.lib}
-	\end{itemize}	
-\end{justify}	
+	\end{itemize}
+\end{justify}
 
 \begin{justify}
 	Puis dans la sous-section \textbf{UNICOLOR HEADERS}, repérez la liste de fonctions nommées :
@@ -336,8 +338,9 @@ avant chaque liste).
 \begin{justify}
     Encore une fois, n'hésitez pas à jeter un œil à l'organisation des autres listes de fonctions d'affichage bicolore pour vous aider.
 \end{justify}
+% ------------
 
-% -----------------------
+% ----------------------
 
 % -----------------------------------------------
 
@@ -356,9 +359,9 @@ avant chaque liste).
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/res/dev-tools/dev-bin/mkmodules.sh}\\[1\baselineskip]
 \end{itemize}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -384,8 +387,9 @@ avant chaque liste).
     \end{itemize}
 \end{justify}
 
+% ------------
 
-% -----------------------
+% ----------------------
 
 % -----------------------------------------------
 
@@ -400,9 +404,9 @@ avant chaque liste).
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MODULES\_UTILS\_ROOT\color{lime}/config/modules/main/Status.conf}\\[1\baselineskip]
 \end{itemize}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -416,9 +420,9 @@ avant chaque liste).
         \item \textbf{Tout fichier où vous avez créé une nouvelle fonction ou modifié une fonction existante, où vous souhaitez appeler cette variable}
     \end{itemize}
 \end{justify}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -499,33 +503,9 @@ Il est recommandé de vérifier si la valeur enregistrée dans votre variable so
     Maintenant, vous pouvez utiliser cette nouvelle variable et ces nouvelles fonctions là où vous le souhaitez dans le module principal, voire dans un autre module, puis dans vos propres scripts.
 \end{justify}
 
+% ------------
 
-% -----------------------
-
-% -----------------------------------------------
-
-\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
-
-\color{green}
-\subsection{\$\_TITRE}\color{white}
-
-\color{blue}
-\subsubsection{Fichiers à éditer}\color{white}
-
-\begin{itemize}
-    \item \textbf{\color{lime}\color{white}}
-\end{itemize}
-
-
-% -----------------------
-
-\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
-
-\color{blue}
-\subsubsection{Consignes}\color{white}
-
-
-% -----------------------
+% ----------------------
 
 % -----------------------------------------------
 
@@ -540,21 +520,47 @@ Il est recommandé de vérifier si la valeur enregistrée dans votre variable so
 \begin{itemize}
     \item \textbf{\color{lime}\color{white}}
 \end{itemize}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Consignes}\color{white}
 
+% ------------
 
-% -----------------------
+% ----------------------
+
+% -----------------------------------------------
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{green}
+\subsection{\$\_TITRE}\color{white}
+
+\color{blue}
+\subsubsection{Fichiers à éditer}\color{white}
+
+\begin{itemize}
+    \item \textbf{\color{lime}\color{white}}
+\end{itemize}
+% ------------
+
+% ----------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{Consignes}\color{white}
+
+% ------------
+
+% ----------------------
 
 % -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \end{document}
-
