--- a/docs/fr/modules/01) Config/main/Status-conf.tex
+++ b/docs/fr/modules/01) Config/main/Status-conf.tex
@@ -68,8 +68,9 @@
     Ce fichier de configurations liste chaque variable globale de statut utilisée par la librairie, avec leurs valeurs par défaut, qui sont chargées en mémoire lors de l'inclusion du fichier \textbf{\color{path}Initialization.sh} appartenant au module principal.
 \end{justify}
 
+% ------------
 
-% -----------------------
+% ----------------------
 
 % -----------------------------------------------
 
@@ -80,7 +81,7 @@
 \color{sec1}
 \section{Liste des variables}\color{text}
 
-\textbf{Variable : \color{vars}\$\_\_BU\_MAIN\_STAT\_}\\[1\baselineskip]
+\textbf{Variable : \color{vars}\$\_\_BU\_MAIN\_STAT\_DEBUG}\\[1\baselineskip]
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
@@ -91,22 +92,33 @@
 \setlength{\parskip}{1em}
 
 \begin{justify}
+    \textbf{Type : }
+\end{justify}
+
+\setlength{\parskip}{1em}
+
+\begin{justify}
     Cette variable
 \end{justify}
+
+% -------
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \textbf{Valeurs acceptées :}
 \begin{enumerate}
-    \item 
+    \item
 \end{enumerate}
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \textbf{Valeur par défaut :}
 
+% ------------
 
-% -----------------------
+% ----------------------
+
+% ----------------------------------------------
 
 \color{vars}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\\[1\baselineskip]
 
@@ -121,6 +133,12 @@
 \setlength{\parskip}{1em}
 
 \begin{justify}
+    \textbf{Type : }
+\end{justify}
+
+\setlength{\parskip}{1em}
+
+\begin{justify}
     Cette variable
 \end{justify}
 
@@ -128,15 +146,18 @@
 
 \textbf{Valeurs acceptées :}
 \begin{enumerate}
-    \item 
+    \item
 \end{enumerate}
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \textbf{Valeur par défaut :}
 
+% ------------
 
-% -----------------------
+% ----------------------
+
+% ----------------------------------------------
 
 \color{vars}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\\[1\baselineskip]
 
@@ -151,6 +172,12 @@
 \setlength{\parskip}{1em}
 
 \begin{justify}
+    \textbf{Type : }
+\end{justify}
+
+\setlength{\parskip}{1em}
+
+\begin{justify}
     Cette variable
 \end{justify}
 
@@ -158,15 +185,18 @@
 
 \textbf{Valeurs acceptées :}
 \begin{enumerate}
-    \item 
+    \item
 \end{enumerate}
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \textbf{Valeur par défaut :}
 
+% ------------
 
-% -----------------------
+% ----------------------
+
+% ----------------------------------------------
 
 \color{vars}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\\[1\baselineskip]
 
@@ -181,6 +211,12 @@
 \setlength{\parskip}{1em}
 
 \begin{justify}
+    \textbf{Type : }
+\end{justify}
+
+\setlength{\parskip}{1em}
+
+\begin{justify}
     Cette variable
 \end{justify}
 
@@ -188,15 +224,18 @@
 
 \textbf{Valeurs acceptées :}
 \begin{enumerate}
-    \item 
+    \item
 \end{enumerate}
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \textbf{Valeur par défaut :}
 
+% ------------
 
-% -----------------------
+% ----------------------
+
+% ----------------------------------------------
 
 \color{vars}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\\[1\baselineskip]
 
@@ -211,6 +250,12 @@
 \setlength{\parskip}{1em}
 
 \begin{justify}
+    \textbf{Type : }
+\end{justify}
+
+\setlength{\parskip}{1em}
+
+\begin{justify}
     Cette variable
 \end{justify}
 
@@ -218,15 +263,18 @@
 
 \textbf{Valeurs acceptées :}
 \begin{enumerate}
-    \item 
+    \item
 \end{enumerate}
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \textbf{Valeur par défaut :}
 
+% ------------
 
-% -----------------------
+% ----------------------
+
+% ----------------------------------------------
 
 \color{vars}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\\[1\baselineskip]
 
@@ -241,6 +289,12 @@
 \setlength{\parskip}{1em}
 
 \begin{justify}
+    \textbf{Type : }
+\end{justify}
+
+\setlength{\parskip}{1em}
+
+\begin{justify}
     Cette variable
 \end{justify}
 
@@ -248,15 +302,18 @@
 
 \textbf{Valeurs acceptées :}
 \begin{enumerate}
-    \item 
+    \item
 \end{enumerate}
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \textbf{Valeur par défaut :}
 
+% ------------
 
-% -----------------------
+% ----------------------
+
+% ----------------------------------------------
 
 \color{vars}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\\[1\baselineskip]
 
@@ -271,6 +328,12 @@
 \setlength{\parskip}{1em}
 
 \begin{justify}
+    \textbf{Type : }
+\end{justify}
+
+\setlength{\parskip}{1em}
+
+\begin{justify}
     Cette variable
 \end{justify}
 
@@ -278,15 +341,18 @@
 
 \textbf{Valeurs acceptées :}
 \begin{enumerate}
-    \item 
+    \item
 \end{enumerate}
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \textbf{Valeur par défaut :}
 
+% ------------
 
-% -----------------------
+% ----------------------
+
+% ----------------------------------------------
 
 \color{vars}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\\[1\baselineskip]
 
