--- a/docs/fr/modules/Fonctionnement.tex
+++ b/docs/fr/modules/Fonctionnement.tex
@@ -44,7 +44,7 @@
 \begin{justify}
     \textbf{Note 1 :} La procédure d'initialisation des modules et de la librairie est décrite en détails dans la sous-section \textbf{\color{red}Fonctionnement \color{white} / \color{green}Étapes d'initialisation} du fichier \textbf{\color{lime}Bash-utils/docs/fr/Introduction.pdf}.
 \end{justify}
- 
+
  \begin{justify}
     \textbf{Note 2 :} La méthode de création de modules est détaillée dans la section \textbf{\color{red}Liste des tutoriels \color{white} / \color{green}Ajouter un nouveau module} du fichier \textbf{\color{lime}Bash-utils/docs/fr/Tutos.pdf}.
  \end{justify}
@@ -68,8 +68,9 @@
     En outre, il est obligatoire de l'installer dans le dossier personnel du super-utilisateur (le dossier \textbf{\color{lime}/root}), pour pouvoir exécuter un script utilisant la librairie Bash Utils avec les privilèges du super-utilisateur, ainsi que pour utiliser certaines fonctionnalités ne pouvant être exécutées qu'avec des privilèges du super-utilisateur.
 \end{justify}
 
+% ------------
 
-% -----------------------
+% ----------------------
 
 % -----------------------------------------------
 
@@ -94,8 +95,9 @@
     Le dossier \textbf{\color{lime}modules} (sous-dossier de \textbf{\color{lime}.Bash-utils}) contient en sous-dossier des dossiers de modules contenant les fichiers d'initialisation propres à chaque module.
 \end{justify}
 
+% ------------
 
-% -----------------------
+% ----------------------
 
 % -----------------------------------------------
 
@@ -110,9 +112,9 @@
 \begin{justify}
 
 \end{justify}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -123,8 +125,9 @@
 
 \end{justify}
 
+% ------------
 
-% -----------------------
+% ----------------------
 
 % -----------------------------------------------
 
@@ -155,8 +158,9 @@
     \end{itemize}
 \end{justify}
 
+% ------------
 
-% -----------------------
+% ----------------------
 
 % -----------------------------------------------
 
@@ -176,9 +180,9 @@
 \begin{justify}
     Ce module est le module de base de la librairie. Il contient toutes les configurations et les fonctions de base de cette dernière.
 \end{justify}
+% ------------
 
-
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -187,9 +191,9 @@
 
 \begin{justify}
     Vous pouvez retrouver ces fonctions dans les différents documents présents dans le dossier \textbf{\color{lime}Bash-utils/docs/fr/modules/main/functions}
-\end{justify}
+\end{justify}% ------------
 
-% -----------------------
+% ----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
