--- a/docs/fr/modules/main/functions/Echo.tex
+++ b/docs/fr/modules/main/functions/Echo.tex
@@ -911,7 +911,7 @@
         \setlength{\parskip}{1em}
 
         \item \textbf{\color{Cyan}BU::EchoCyan}\setlength{\parskip}{0em}
-        \item \textbf{\color{Fuchsia}BU::EchoFuschia}
+        \item \textbf{\color{Fuchsia}BU::EchoFuchsia}
         \item \textbf{\color{Gray}BU::EchoGray}
 
         \setlength{\parskip}{1em}
