--- a/docs/fr/modules/main/functions/Echo.tex
+++ b/docs/fr/modules/main/functions/Echo.tex
@@ -181,7 +181,16 @@
 \color{sec3}
 \subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{text}
 
-\textbf{Variable : \color{vars}\$\_\_BU\_MAIN\_COLOR\_BG\_...}\\[1\baselineskip]
+\begin{justify}
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{Variable : \color{vars}\$\_\_BU\_MAIN\_COLOR\_BG\_...} & \textbf{\color{path}Colors.conf}\\
+        \textbf{Variable : \color{vars}\$\_\_BU\_MAIN\_COLOR\_BG\_...} & \textbf{\color{path}Colors.conf}\\
+        \hline
+    \end{tabular}
+
+\end{justify}
+
 
 \begin{justify}
     \textbf{Description :} Chacune des variables globales de couleur de fond commençant par ce nom retourne le résultat de la fonction \textbf{\color{func}BU::Main::ModConfig::Colors::SetBGColor} lors de l'appel d'une de ces variables, pour colorer l'arrière plan du texte selon le code couleur.
