--- a/docs/fr/modules/01) Config/main/Colors-conf.tex
+++ b/docs/fr/modules/01) Config/main/Colors-conf.tex
@@ -77,11 +77,55 @@
 \color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
 \color{sec1}
-\section{Liste des variables}\color{text}
+\section{Liste des fonctions}\color{text}
+
+\color{sec2}
+\subsection{Fonctions d'encodage}\color{text}
+
+\color{sec3}
+\subsubsection{BU::Main::ModConfig::Colors::SetBGColor}\color{text}
 
 \begin{justify}
-    \begin{tabular}{l|l|l}
-        \textbf{Nom de la variable} & \textbf{Type} & \textbf{Valeurs acceptées}
+    \textbf{Fonction : \color{func}BU::Main::ModConfig::Colors::SetBGColor}
+\end{justify}
+
+% ----------------------
+
+\color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
+\color{sec3}
+\subsubsection{BU::Main::ModConfig::Colors::SetTextColor}\color{text}
+
+\begin{justify}
+    \textbf{Fonction : \color{func}BU::Main::ModConfig::Colors::SetTextColor}
+\end{justify}
+
+% ----------------------
+
+% -----------------------------------------------
+
+\color{sec2}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
+\color{sec2}
+\subsection{Fonctions d'affichage de texte}\color{text}
+
+% ----------------------
+
+% -----------------------------------------------
+
+% /////////////////////////////////////////////////////////////////////////////////////////////// %
+
+\color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
+\color{sec1}
+\section{Liste des variables}\color{text}
+
+\color{sec2}
+\subsection{Codes couleur}\color{text}
+
+\begin{justify}
+    \begin{tabular}{l|l}
+        \textbf{Nom de la variable} & \textbf{Type}
     \end{tabular}
 \end{justify}
 
@@ -94,111 +138,13 @@
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \begin{justify}
-    \begin{tabular}{l|l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_DEBUG}  & Booléen & \textbf{false} || \textbf{true} \\[1\baselineskip]
+    \begin{tabular}{l|l}
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_COLOR\_CODE\_...}  & Substitution de commande\\
     \end{tabular}
 \end{justify}
 
 \begin{justify}
-
-\end{justify}
-
-% ------------
-
-\par\noindent\rule{\textwidth}{0.4pt}
-
-\begin{justify}
-    \begin{tabular}{l|l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_DECHO}  & Chaîne de caractères    & \textbf{authorize} || \textbf{forbid} || \textbf{restrict}\\[1\baselineskip]
-    \end{tabular}
-\end{justify}
-
-\begin{justify}
-
-\end{justify}
-
-% ------------
-
-\par\noindent\rule{\textwidth}{0.4pt}
-
-\begin{justify}
-    \begin{tabular}{l|l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_ECHO}   & Booléen      & \textbf{false} || \textbf{true}\\[1\baselineskip]
-    \end{tabular}
-\end{justify}
-
-\begin{justify}
-
-\end{justify}
-
-% ------------
-
-\par\noindent\rule{\textwidth}{0.4pt}
-
-\begin{justify}
-    \begin{tabular}{l|l|l}
-                \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_ERROR}  & Chaîne de caractères    & \textit{aucune valeur} || \textbf{fatal}\\[1\baselineskip]
-    \end{tabular}
-\end{justify}
-
-\begin{justify}
-
-\end{justify}
-
-% ------------
-
-\par\noindent\rule{\textwidth}{0.4pt}
-
-\begin{justify}
-    \begin{tabular}{l|l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_INITIALIZING}       & Booléen  & \textbf{false} || \textbf{true}\\[1\baselineskip]
-    \end{tabular}
-\end{justify}
-
-\begin{justify}
-
-\end{justify}
-
-% ------------
-
-\par\noindent\rule{\textwidth}{0.4pt}
-
-\begin{justify}
-    \begin{tabular}{l|l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_LOG}    & Booléen      & \textbf{false} || \textbf{true}\\[1\baselineskip]
-    \end{tabular}
-\end{justify}
-
-\begin{justify}
-
-\end{justify}
-
-% ------------
-
-\par\noindent\rule{\textwidth}{0.4pt}
-
-\begin{justify}
-    \begin{tabular}{l|l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_LOG\_REDIRECT}  & Chaîne de caractères & \textit{aucune valeur} || \textbf{log} || \textbf{tee}\\[1\baselineskip]
-    \end{tabular}
-\end{justify}
-
-\begin{justify}
-
-\end{justify}
-
-% ------------
-
-\par\noindent\rule{\textwidth}{0.4pt}
-
-\begin{justify}
-    \begin{tabular}{l|l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_OPERATE\_ROOT}  & Chaîne de caractères & \textbf{authorized} || \textbf{forbidden} || \textbf{restricted}\\[1\baselineskip]
-    \end{tabular}
-\end{justify}
-
-\begin{justify}
-
+    Chacune de ces variables enregistrent le code couleur 
 \end{justify}
 
 % ------------
@@ -207,12 +153,12 @@
 
 \begin{justify}
     \begin{tabular}{l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_TIME\_HEADER}   & Nombre décimal\\[1\baselineskip]
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}  & Chaîne de caractères \\[1\baselineskip]
     \end{tabular}
 \end{justify}
 
 \begin{justify}
-    Cette variable sert à mettre en pause l'exécution du script pendant un temps bref lors de l'affichage d'un header.
+    Cette variable invoque un appel de la fonction \textbf{\color{func}BU::Main::}
 \end{justify}
 
 % ------------
@@ -221,12 +167,12 @@
 
 \begin{justify}
     \begin{tabular}{l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_TIME\_NEWLINE}  & Nombre décimal\\[1\baselineskip]
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}   & \\[1\baselineskip]
     \end{tabular}
 \end{justify}
 
 \begin{justify}
-
+    Cette variable
 \end{justify}
 
 % ------------
@@ -235,12 +181,12 @@
 
 \begin{justify}
     \begin{tabular}{l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_TIME\_TXT}  & Nombre décimal\\[1\baselineskip]
+                \textbf{\color{vars}\$\_\_BU\_MAIN\_}  & Chaîne de caractères \\[1\baselineskip]
     \end{tabular}
 \end{justify}
 
 \begin{justify}
-
+    Cette variable
 \end{justify}
 
 % ------------
@@ -248,13 +194,13 @@
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \begin{justify}
-    \begin{tabular}{l|l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_TXT\_FMT}   & Booléen & \textbf{false} || \textbf{true}\\[1\baselineskip]
+    \begin{tabular}{l|l}
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}       & Booléen \\[1\baselineskip]
     \end{tabular}
 \end{justify}
 
 \begin{justify}
-    Cette variable de statut vérifie que le script ait la permission de formater le texte (couleurs, gras, italique, soulignage, clignotement, etc...).
+    Cette variable
 \end{justify}
 
 % ------------
@@ -262,13 +208,111 @@
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \begin{justify}
-    \begin{tabular}{l|l|l}
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_USER\_OS}   & &\\[1\baselineskip]
+    \begin{tabular}{l|l}
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}    & Booléen \\[1\baselineskip]
     \end{tabular}
 \end{justify}
 
 \begin{justify}
+    Cette variable
+\end{justify}
 
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \begin{tabular}{l|l}
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}  & Chaîne de caractères \\[1\baselineskip]
+    \end{tabular}
+\end{justify}
+
+\begin{justify}
+    Cette variable
+\end{justify}
+
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \begin{tabular}{l|l}
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}  & Chaîne de caractères \\[1\baselineskip]
+    \end{tabular}
+\end{justify}
+
+\begin{justify}
+    Cette variable
+\end{justify}
+
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \begin{tabular}{l|l}
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}   & Nombre décimal\\[1\baselineskip]
+    \end{tabular}
+\end{justify}
+
+\begin{justify}
+    Cette variable
+\end{justify}
+
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \begin{tabular}{l|l}
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}  & Nombre décimal\\[1\baselineskip]
+    \end{tabular}
+\end{justify}
+
+\begin{justify}
+    Cette variable
+\end{justify}
+
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \begin{tabular}{l|l}
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}  & Nombre décimal\\[1\baselineskip]
+    \end{tabular}
+\end{justify}
+
+\begin{justify}
+    Cette variable
+\end{justify}
+
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \begin{tabular}{l|l}
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}   & Booléen \\[1\baselineskip]
+    \end{tabular}
+\end{justify}
+
+\begin{justify}
+    Cette variable
+\end{justify}
+
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \begin{tabular}{l|l}
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_}   & \\[1\baselineskip]
+    \end{tabular}
+\end{justify}
+
+\begin{justify}
+    Cette variable
 \end{justify}
 
 \end{document}
